# Governed-Analytics-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
dbt/retail_dwh/: dbt_project.yml  profiles.yml
dbt/retail_dwh/macros/: generate_schema_name.sql  portability.sql
dbt/retail_dwh/models/: _exposures.yml
dbt/retail_dwh/models/marts/: _marts.yml
dbt/retail_dwh/models/marts/dimensions/: dim_customers.sql  dim_dates.sql  dim_products.sql  dim_stores.sql
dbt/retail_dwh/models/marts/facts/: fact_customer_orders.sql  fact_sales.sql
dbt/retail_dwh/models/marts/semantic/: _metrics.yml  _semantic_models.yml
dbt/retail_dwh/models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql
dbt/retail_dwh/models/streaming/: _semantic_live.yml  _streaming.yml  fact_sales_live.sql  rt_freshness.sql  stg_order_events.sql
dbt/retail_dwh/tests/: assert_rt_freshness_within_sla.sql
docker/: Dockerfile  entrypoint.sh
docs/: snowflake-deployment.md
eval/: __init__.py  cases.py  run_eval.py
governed_analytics_agent/: __init__.py  agent.py  api.py  catalog.py  cli.py  config.py  evaluation.py  freshness.py  guardrails.py  insights.py  pricing.py  ratelimit.py  reporting.py  semantic_layer.py  streaming.py  verify.py
scripts/: generate_raw_data.py  load_bronze.py  load_bronze_snowflake.py  stream_orders.py
tests/: test_agent.py  test_api.py  test_catalog.py  test_evaluation.py  test_freshness.py  test_guardrails.py  test_insights.py  test_pricing.py  test_ratelimit.py  test_reporting.py  test_semantic_layer.py  test_streaming.py  test_verify.py
