[project]
name = "governed-analytics-agent"
version = "0.1.0"
description = "Governed analytics agent: dbt Medallion + MetricFlow semantic layer + LLM agent over the semantic layer (no raw text-to-SQL)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.111.0",
    "dbt-duckdb>=1.8",
    "dbt-metricflow>=0.13.0",
    "duckdb>=1.5.4",
    "faker>=40.23.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
