[project]
name = "governed-analytics-agent"
version = "0.1.0"
description = "Governed analytics agent: dbt Medallion + MetricFlow semantic layer + LLM agent over the semantic layer (no raw text-to-SQL)."
readme = "README.md"
# Pinned, tested, and shipped on 3.11 (.python-version, Docker image, CI all 3.11).
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "dbt-duckdb>=1.8",
    "dbt-metricflow>=0.13.0",
    "duckdb>=1.5.4",
    "faker>=40.23.0",
    "fastapi>=0.139.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A focused, high-signal rule set: pyflakes/pycodestyle, import sorting,
# pyupgrade, bugbear, comprehensions, simplify, and ruff's own checks.
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "BLE", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally reach into private helpers and use terse fixtures.
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["governed_analytics_agent"]
# Third-party libs (anthropic, pandas, duckdb, dbt, metricflow) ship without
# complete stubs; we check our own code, not theirs.
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
source = ["governed_analytics_agent"]
branch = true

[tool.coverage.report]
show_missing = true
# Defensive / unreachable-in-test paths, not logic to cover.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
